HelloUltraviolet/Fixtures/RejectedSource/Procedures/NoMatchingOverload/Expected.uv
//! Expected diagnostic metadata for the NoMatchingOverload rejected-source specimen.

expectedDiagnostic("E-SEM-3031", "req.15.FreeCallOverloadResolutionAlgorithm")
